--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </p>
         </div>
         <div class="hero-visual" aria-hidden="true">
-          <img class="profile-photo" src="../Images/Nikhil.jpeg" alt="Nikhil Puri Goswami" width="220" height="220" />
+          <img class="profile-photo" src="Nikhil.jpeg" alt="Nikhil Puri Goswami" width="220" height="220" />
         </div>
       </div>
     </section>
@@ -134,4 +134,5 @@
   <script src="script.js"></script>
   <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
 </body>
+
 </html>
